--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-audio-lit",
+  "name": "@tronicboy/wc-virtual-keyboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
