--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,5 +12,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
-      - run: npm ci
-      - run: npm run build
+      - run: yarn install
+      - run: yarn build
