--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,3 +14,7 @@ jobs:
           node-version: "18.x"
       - run: yarn install
       - run: yarn build
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build # The folder the action should deploy.
